<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:padding="@dimen/lin_margin"
        tools:showIn="@layout/content_main"
        tools:context=".MainActivity">


    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/lin_margin">

        <com.cnc.tom_macos.cnc_a20.MyTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/ji_hao"
                android:inputType="text"
                android:textSize="24sp"
                android:textColor="@color/colorPrimaryDark3"
                android:maxLines="1"
                android:layout_weight="1"/>
        <com.cnc.tom_macos.cnc_a20.MyTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/xun_huan_shi"
                android:inputType="number"
                android:maxLines="1"
                android:layout_gravity="bottom"
                android:layout_weight="1"/>
        <com.cnc.tom_macos.cnc_a20.MyTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/dan_pan_shu"
                android:inputType="number"
                android:maxLines="1"
                android:layout_gravity="bottom"
                android:layout_weight="1"/>
        <com.cnc.tom_macos.cnc_a20.MyTextView
                android:text="@string/biao_chan"
                android:textColor="@color/profile_badge_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:gravity="end"
                android:layout_weight="1"/>
    </LinearLayout>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/lin_margin">
        <android.support.design.widget.TextInputEditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/pan_shu"
                android:inputType="number"
                android:maxLines="1"
                android:layout_weight="1"
                android:background="@null"/>
        <android.support.design.widget.TextInputEditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/jia_san_shu"
                android:inputType="number"
                android:maxLines="1"
                android:layout_weight="1"
                android:background="@null"/>
        <android.support.design.widget.TextInputEditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/jian_san_shu"
                android:inputType="number"
                android:maxLines="1"
                android:textColor="@color/colorPrimary"
                android:layout_weight="1"
                android:background="@null"/>
        <android.support.design.widget.TextInputEditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/bu_liang_shu"
                android:inputType="number"
                android:maxLines="1"
                android:textColor="@color/colorPrimary"
                android:layout_weight="1"
                android:background="@null"/>
        <com.cnc.tom_macos.cnc_a20.MyTextView
                android:text="@string/result"
                android:textColor="@color/user_icon_4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:layout_weight="1"/>
    </LinearLayout>

</LinearLayout>
