<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:showIn="@layout/activity_main"
        tools:context=".MainActivity">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@color/colorPrimary1"
            android:padding="@dimen/lin_margin">
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ji_hao"
                android:textColor="@android:color/white"
                android:paddingLeft="@dimen/lin_margin"
                android:layout_weight="1"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/jian_shi"
                android:textColor="@android:color/white"
                android:layout_weight="1"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dan_pan"
                android:textColor="@android:color/white"
                android:layout_weight="1"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/biao_chan"
                android:textColor="@android:color/white"
                android:gravity="end"
                android:paddingRight="@dimen/lin_margin"
                android:paddingEnd="@dimen/lin_margin"
                android:layout_weight="1" />
    </LinearLayout>

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <LinearLayout
                android:id="@+id/parent_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="70sp">
            <include layout="@layout/jitai_main"/>
            <include layout="@layout/jitai_main"/>
            <include layout="@layout/jitai_main"/>
            <include layout="@layout/jitai_main"/>
            <include layout="@layout/jitai_main"/>
            <include layout="@layout/jitai_main"/>

        </LinearLayout>
    </ScrollView>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>
